--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="public/style.css" />
 	<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
 	<link rel="stylesheet" href="https://unpkg.com/leaflet-draw/dist/leaflet.draw.css"/>
+	<script src="/jquery/jquery.min.js"></script>
 	<title>GeoSoftware1 Assignment 5</title>
 </head>
 
