Last commit for this evening

--- a/index2.html
+++ b/index2.html
@@ -39,8 +39,10 @@
 		<br><br>
 
 		<button type="demo" onclick="getLocation()">use User Location</button>
+		<button type="demo" onclick="deletedata()">delete point</button>
 		<br><br>
 		<textarea id="readpoint">insert Point GeoJSON</textarea>
+		<textarea id="ID">ID from to deleted point</textarea><br />
 		<br><br>
 		<p id="demo"></p>
 
