--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 	<link rel="stylesheet" href="public/style.css" />
 	<title>GeoSoftware1 Assignment 6</title>
 	<script src="/jquery/jquery.min.js"></script>
-
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-	<script src="leaflet-heat.js"></script>
+
+	<script src="/leaflet/leaflet.js"></script>
+	<script src="/leaflet-heat/leaflet-heat.js"></script>
 </head>
 
 <body>
@@ -113,6 +114,8 @@
 
 		<br><br>
 
+<button type="button" onclick="makeHeatMap()" class="btn btn-default">test</button>
+
 <!-- footer -->
 		<footer class="container-fluid text-center">
 			<p>Impressum
@@ -124,6 +127,7 @@
 					© Judith Bresser 2020</p>
 				</footer>
 	<!-- /footer -->
+
 
 				<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v1.5.1/leaflet.css" />
 				<script src="http://cdn.leafletjs.com/leaflet/v1.5.1/leaflet.js"></script>
