--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
 <head>
 	<title>GeoSoftware1 Assignment 6</title>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<link rel="stylesheet" href="public/style.css" />
 
 	<script src="/jquery/jquery.min.js"></script>
