--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
 			<div class="col-sm-6">
 				<div class="form-group">
+					<button type="button" onclick="makeHeatMap()" class="btn btn-default">create HeatMap</button>
+					<br>
 					<label for="text">Hier werden die Daten aus der Datenbank ausgegeben:</label>
 					<textarea class="form-control" id="text" rows="3"></textarea>
 					<button onclick="showFiles()" class="btn btn-default">Get Data</button>
@@ -114,7 +116,7 @@
 
 		<br><br>
 
-<button type="button" onclick="makeHeatMap()" class="btn btn-default">test</button>
+
 
 <!-- footer -->
 		<footer class="container-fluid text-center">
@@ -130,7 +132,7 @@
 
 
 				<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v1.5.1/leaflet.css" />
-				<script src="http://cdn.leafletjs.com/leaflet/v1.5.1/leaflet.js"></script>
+
 				<script src="public/script.js"></script>
 			</body>
 			</html>
